--- a/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
+++ b/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
@@ -41,32 +41,97 @@
           </div>
           <div class="card-body">
             <div class="row">
-              <div class="card">
-                <div class="card-header h4">
-                  ຍອດຂາຍຕາມອາຫານ
+              <div class="col col-md3">
+                <div class="card">
+                  <div class="card-header h4">
+                    ຍອດຂາຍຕາມອາຫານ
+                  </div>
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table class="table table-bordered table-hover" style="margin: 0;">
+                        <thead class="thead-light">
+                          <th class="text-center h6">#</th>
+                          <th class="text-center h6">ອາຫານ</th>
+                          <th class="text-center h6">ຈຳນວນ</th>
+                          <th class="text-center h6">ລວມຕົ້ນທຶນ</th>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let trx of foodsTransactions ; let i  = index">
+                            <td class="text-center">{{ i+1 }}</td>
+                            <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
+                            <td class="text-right">{{ trx.quantity |number }}</td>
+                            <td class="text-right">{{ trx.total_cost | number }}</td>
+                          </tr>
+                          <tr>
+                            <td class="text-center h6" colspan="2">ລວມ</td>
+                            <td class="text-right h6">{{ countItem | number }}</td>
+                            <td class="text-right h6">{{ grandTotal | number }}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <div>
-                    <table class="table table-bordered table-hover" style="margin: 0;">
-                      <thead class="thead-light">
-                        <th class="text-center h6">#</th>
-                        <th class="text-center h6">ອາຫານ</th>
-                        <th class="text-center h6">ຈຳນວນ</th>
-                        <th class="text-center h6">ລວມຕົ້ນທຶນ</th>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let trx of foodsTransactions ; let i  = index">
-                          <td class="text-center">{{ i+1 }}</td>
-                          <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
-                          <td class="text-right">{{ trx.quantity |number }}</td>
-                          <td class="text-right">{{ trx.total_cost | number }}</td>
-                        </tr>
-                        <tr>
-                          <td class="text-center h6" colspan="3">ລວມ</td>
-                          <td class="text-right h6">{{ grandTotal | number }}</td>
-                        </tr>
-                      </tbody>
-                    </table>
+              </div>
+              <div class="col col-md3">
+                <div class="card ">
+                  <div class="card-header h4">
+                    ລາຍຈ່າຍ
+                  </div>
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <ng-container *ngIf="payments; else noPayment">
+                        <table class="table table-bordered table-hover" style="margin: 0;">
+                          <thead class="thead-light">
+                            <th class="text-center h6">#</th>
+                            <th class="text-center h6">ວັນທີ</th>
+                            <th class="text-center h6">ເນື້ອໃນລາຍຈ່າຍ</th>
+                            <th class="text-center h6">ຈຳນວນ</th>
+                            <th class="text-center h6">ມູນຄ່າ</th>
+                            <th class="text-center h6">ຜຸ້ເອົາເງິນໃຫ້</th>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let payment of payments ; let i  = index">
+                              <td class="text-center">{{ i+1 }}</td>
+                              <td class="text-center text-nowrap" style="width: 300px;">
+                                {{ payment.paymentDate |date: 'dd-MMM-yyy H:mm:ss' }}</td>
+                              <td class="text-left text-nowrap" style="width: 300px;">{{ payment.remarks }}</td>
+                              <td class="text-right">{{ payment.quantity |number }}</td>
+                              <td class="text-right">{{ payment.amount | number }}</td>
+                              <td class="text-center">{{ payment.buyer  }}</td>
+                            </tr>
+                            <tr>
+                              <td class="text-center h6" colspan="3">ລວມ</td>
+                              <td class="text-right h6">{{ paymentCount | number }}</td>
+                              <td class="text-right h6">{{ paymentSummary | number }}</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </ng-container>
+                      <ng-template #noPayment>
+                        <div class="h5 text-center">ບໍ່ມິລາຍຈ່າຍສຳຫຼັບມື້ນີ້</div>
+                      </ng-template>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header">
+                    <div class="h5">
+                      ລາຍຮັບສຸທິ
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <div class="display-4">
+                      <div class="row">
+                        <div class="col col-md-6 text-left">
+                          ຍອດລວມ
+                        </div>
+                        <div class="col col-md-6 text-nowrap text-right">
+                          {{ netPayment | number }} ກິບ
+                        </div>
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
