--- a/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
+++ b/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
@@ -80,7 +80,7 @@
                   </div>
                   <div class="card-body">
                     <div class="table-responsive">
-                      <ng-container *ngIf="payments; else noPayment">
+                      <ng-container *ngIf="paymentSummary; else noPayment">
                         <table class="table table-bordered table-hover" style="margin: 0;">
                           <thead class="thead-light">
                             <th class="text-center h6">#</th>
