--- a/src/app/dialogs/add-food-fx-tranx/add-food-fx-tranx.component.html
+++ b/src/app/dialogs/add-food-fx-tranx/add-food-fx-tranx.component.html
@@ -2,17 +2,10 @@
 <form [formGroup]="addFoodFxTranxForm">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="foodFxName">ອາຫານ</label>
-      <select class="form-control" formControlName="foodId">
-        <option value="" disabled>ເລືອກ</option>
-        <option value="food.id" *ngFor="let food of foods">{{ food.food_name }}</option>
-      </select>
-    </div>
-    <div class="form-group col-md-6">
       <label for="productId">ສ່ວນປະກອບ</label>
       <select class="form-control" formControlName="productId">
         <option value="" disabled>ເລືອກ</option>
-        <option value="product.id" *ngFor="let product of products">{{ product.product_name }}</option>
+        <option value="{{ product.id }}" *ngFor="let product of products">{{ product.product_name }}</option>
       </select>
     </div>
     <div class="form-group col-md-6">
@@ -23,27 +16,42 @@
       <label for="unitId">ຫົວໜ່ວຍ</label>
       <select class="form-control" formControlName="unitId">
         <option value="" disabled>ເລືອກ</option>
-        <option value="unit.id" *ngFor="let unit of units">{{ unit.unit_name }}</option>
+        <option value="{{ unit.id }}" *ngFor="let unit of units">{{ unit.unit_name }}</option>
       </select>
     </div>
   </div>
   <mat-divider></mat-divider>
+
   <div class="text-right mt-1 mb-2">
-    <button mat-raised-button color="primary" (click)="createFoodFxTranx()"
+    <button mat-raised-button color="primary" class="mr-1" (click)="createFoodFxTranx()"
       [disabled]="btnDisable">ເພີ່ມສູດອາຫານ</button>
+    <button mat-raised-button color="warn" [disabled]="btnDisable" (click)="closeDialog()">Close</button>
   </div>
+
   <mat-divider></mat-divider>
   <div class="table-responsive mt-1">
-    <table class="table">
+    <table class="table table-bordered">
       <thead class="thead-dark">
         <tr>
           <th scope="col" class="text-center">#</th>
-          <th scope="col" class="text-center">ອາຫານ</th>
           <th scope="col" class="text-center">ສ່ວນປະກອບ</th>
           <th scope="col" class="text-center">ຈຳນວນ</th>
           <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+          <th scope="col" class="text-center">ລາຄາ</th>
+          <th scope="col" class="text-center">ລຶບ</th>
         </tr>
       </thead>
+      <tr *ngFor="let foodFx of foodFxTranxs; let i = index">
+        <td class="text-center">{{ i+1 }}</td>
+        <td class="text-left">{{ foodFx.product_name }}</td>
+        <td class="text-right">{{ foodFx.quantity |number }}</td>
+        <td class="text-center">{{ foodFx.unit_name }}</td>
+        <td class="text-right">{{ foodFx.cost |number }}</td>
+        <td class="text-center">
+          <img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer;"
+            (click)="removeItem(foodFx.fxtId)">
+        </td>
+      </tr>
     </table>
   </div>
 
