--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -108,9 +108,25 @@
         </div>
       </ng-container>
     </div>
-    <!-- Charts -->
-    <div class="row">
-
+    <!-- Charts
+    <div class="row mb-2">
+      <mat-card>
+        <mat-card-title class="text-center">ຍອດການຂາຍຕາມປະເພດອາຫານ</mat-card-title>
+        <mat-card-content>
+          <canvas id="canvasFoodType">{{ chartFoodCat }}</canvas>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    -->
+    <div class="row mb-2">
+      <div class="col col-md-12">
+        <mat-card>
+          <mat-card-title class="text-center">ຍອດການຂາຍຕາມວັນ</mat-card-title>
+          <mat-card-content>
+            <canvas id="canvas">{{ chartRev }}</canvas>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
     <!-- Notification -->
     <div class="row">
