update popularity report

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -98,19 +98,16 @@
 
         </div>
 
-
-        <!-- Charts
-    <div class="row mb-2">
-      <mat-card>
-        <mat-card-title class="text-center">ຍອດການຂາຍຕາມປະເພດອາຫານ</mat-card-title>
-        <mat-card-content>
-          <canvas id="canvasFoodType">{{ chartFoodCat }}</canvas>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    -->
         <div class="row mb-2">
-          <div class="col col-md-12">
+          <div class="col col-md-6">
+            <mat-card>
+              <mat-card-title class="text-center">ຊ່ວງເວລາທີ່ມິລູກຄ້າເຂົ້າ</mat-card-title>
+              <mat-card-content>
+                <canvas id="canvasPopularTime">{{ chartPopularTime }}</canvas>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col col-md-6">
             <mat-card>
               <mat-card-title class="text-center">ຍອດການຂາຍຕາມວັນ</mat-card-title>
               <mat-card-content>
@@ -119,7 +116,6 @@
             </mat-card>
           </div>
         </div>
-
       </ng-container>
       <ng-container *ngIf="roleId > 1">
         <div class="card">
