--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -116,6 +116,16 @@
             </mat-card>
           </div>
         </div>
+        <div class="row mb-2">
+          <div class="col col-md-6">
+            <mat-card>
+              <mat-card-title class="text-center">ຍອດການຂາຍຕາມປະເພດອາຫານ</mat-card-title>
+              <mat-card-content>
+                <canvas id="canvasFoodType">{{ chartFoodCat }}</canvas>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
       </ng-container>
       <ng-container *ngIf="roleId > 1">
         <div class="card">
