--- a/src/app/dialogs/add-food-fx-tranx/add-food-fx-tranx.component.html
+++ b/src/app/dialogs/add-food-fx-tranx/add-food-fx-tranx.component.html
@@ -3,7 +3,7 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="productId">ສ່ວນປະກອບ</label>
-      <select class="form-control" formControlName="productId">
+      <select class="form-control" formControlName="productId" (change)="getProductById($event.target.value)">
         <option value="" disabled>ເລືອກ</option>
         <option value="{{ product.id }}" *ngFor="let product of products">{{ product.product_name }}</option>
       </select>
