--- a/src/app/dialogs/product-takeoff/product-takeoff.component.html
+++ b/src/app/dialogs/product-takeoff/product-takeoff.component.html
@@ -44,9 +44,16 @@
           <input type="text" class="form-control text-right" readonly formControlName="totalUsedQuantity" required
             id="totalUsedQuantity">
         </div>
-        <div class="form-group col-md-12">
+        <div class="form-group col-md-4">
+          <label for="drinkCategoryId">ສຳຫຼັບອາຫານ</label>
+          <select class="form-control" id="drinkCategoryId" formControlName="drinkCategoryId" required>
+            <option value="" disabled>ເລືອກ</option>
+            <option value="{{ food.id }}" *ngFor="let food of foods">{{ food.drink_category_name }}</option>
+          </select>
+        </div>
+        <div class="form-group col-md-8">
           <label for="remarks">ເນື້ອໃນ</label>
-          <input type="text-area" class="form-control text-right" formControlName="remarks" required id="remarks">
+          <input type="text-area" class="form-control" formControlName="remarks" required id="remarks">
         </div>
       </div>
     </form>
