--- a/src/app/pages/stocks/stocks.component.html
+++ b/src/app/pages/stocks/stocks.component.html
@@ -146,6 +146,16 @@
                     <form [formGroup]="reportForm">
                       <div class="row">
                         <div class="col col-md-2 col-sm-12">
+                          <label for="dcId" class="h6">ອາຫານ</label>
+                          <div class="input-group mb-1">
+                            <select class="form-control" id="dcId" formControlName="dcId">
+                              <option value="" disabled>ເລຶອກ</option>
+                              <option value="{{ drnk.id }}" *ngFor="let drnk of drinkCat">{{ drnk.drink_category_name }}
+                              </option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="col col-md-2 col-sm-12">
                           <label for="fromDate" class="h6">ເລີ່ມຈາກວັນທີ</label>
                           <div class="input-group mb-1">
                             <input type="date" class="form-control" formControlName="startDate" required>
@@ -161,8 +171,65 @@
                           <label for="fromDate"></label>
                           <div class="input-group mb-1">
                             <button mat-raised-button color="primary" (click)="loadReport()"
-                              style="margin-top: 12px;width: 200px;">Submit</button>
+                              style="margin-top: 7px;width: 200px;">Submit</button>
                           </div>
+                        </div>
+                        <div class="col col-md-12 mt-2 mat-elevation-z8">
+                          <mat-table #table [dataSource]="reports">
+                            <ng-container matColumnDef="no">
+                              <mat-header-cell *matHeaderCellDef fxFlex="5%">
+                                <h5>No.</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let i =  index" fxFlex="5%"> {{ i + 1 }} </mat-cell>>
+                              <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="product_name">
+                              <mat-header-cell *matHeaderCellDef fxFlex="55%">
+                                <h5>ສ່ວນປະກອບ</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let r" fxFlex="55%"> {{ r.product_name }} </mat-cell>
+                              <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                            </ng-container>
+                            <ng-container matColumnDef="quantity">
+                              <mat-header-cell *matHeaderCellDef fxFlex="10%">
+                                <h5>ຈຳນວນ</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let r" fxFlex="10%"> {{ r.quantity | number }} </mat-cell>
+                              <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                            </ng-container>
+                            <ng-container matColumnDef="unit">
+                              <mat-header-cell *matHeaderCellDef fxFlex="10%">
+                                <h5>ຫົວໜ່ວຍ</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let r" fxFlex="10%"> {{ r.unit_name }} </mat-cell>
+                              <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                            </ng-container>
+                            <ng-container matColumnDef="cost">
+                              <mat-header-cell *matHeaderCellDef fxFlex="10%">
+                                <h5>ລາຄາ ຕໍ່ ໜ່ວຍ</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let r" fxFlex="10%">
+                                {{ r.cost | number }}
+                              </mat-cell>
+                              <td mat-footer-cell *matFooterCellDef fxFlex="10%">
+                                <h5>ລວມຕົ້ນທຶນ</h5>
+                              </td>
+                            </ng-container>
+                            <ng-container matColumnDef="total_cost">
+                              <mat-header-cell *matHeaderCellDef fxFlex="10%">
+                                <h5>ລາຄາລວມ</h5>
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let r" fxFlex="10%"> {{ r.total_cost | number }} </mat-cell>
+                              <mat-footer-cell *matFooterCellDef fxFlex="10%">
+                                <h5>{{ getTotalCost() | number }}</h5>
+                              </mat-footer-cell>
+                            </ng-container>
+                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                            <mat-footer-row *matFooterRowDef="displayedColumns"></mat-footer-row>
+                          </mat-table>
+                          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100, 1000]"></mat-paginator>
                         </div>
                       </div>
                     </form>
