--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -21,6 +21,14 @@
           productType.category_name }}</option>
       </select>
     </div>
+    <div class="form-group col-md-6">
+      <label for="productCategoryId">Product Category</label>
+      <select class="form-control" formControlName="productCategoryId" required>
+        <option value="-1" disabled>------</option>
+        <option *ngFor="let productCat of productCategoriesP" value="{{ productCat.id }}">
+          {{ productCat.product_category_name }}</option>
+      </select>
+    </div>
 
     <div class="form-group col-md-6">
       <label for="foodId">Food Name</label>
