--- a/src/app/pages/purchase-grid/purchase-grid.component.html
+++ b/src/app/pages/purchase-grid/purchase-grid.component.html
@@ -1,15 +1,22 @@
 <div>
   <div class="row mt-2">
-    <div class="col col-md-8">
+    <div class="col col-md-7">
       <div class="card">
         <div class="card-body">
-          <div class="form-group col-md-3">
-            <label for="productCategories">ປະເພດສິນຄ້າ</label>
-            <select class="form-control" id="productCategories" [(ngModel)]="selectedCate">
-              <option value="0">ທັງໝົດ</option>
-              <option value="{{cat.id}}" *ngFor="let cat of productCategories">{{ cat.product_category_name }}</option>
-            </select>
+          <div class="form-group row">
+            <label for="productCategories" class="col-sm-2 col-form-label">ປະເພດສິນຄ້າ</label>
+            <div class="col-md-4">
+              <select class="form-control" id="productCategories" [(ngModel)]="selectedCate">
+                <option value="0">ທັງໝົດ</option>
+                <option value="{{cat.id}}" *ngFor="let cat of productCategories">{{ cat.product_category_name }}
+                </option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <button mat-stroked-button color="primary" (click)="openAddNewProd()">ເພິ່ມລາຍການໃໝ່</button>
+            </div>
           </div>
+
         </div>
       </div>
       <div class="card mt-1">
@@ -21,8 +28,11 @@
                   <div class="card-body">
                     <img src="../../../assets/images/NoImage.png" class="img-thumbnail">
                     <div class="row ">
-                      <div class="col col-md-12 text-center mt-3 mb-0">
+                      <div class="col col-md-12 text-left mt-3 mb-0">
                         <h6 class="card-title">{{ product.product_name }}</h6>
+                      </div>
+                      <div class="col col-md-12 text-right">
+                        <h6 class="card-title">ລາຄາ {{ product.cost | number }} ກິບ</h6>
                       </div>
                     </div>
                   </div>
@@ -33,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div class="col col-md-4">
+    <div class="col col-md-5">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
